[package]
name = "dash2gps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
image = "0.24.5"
tesseract = "0.12.0"
tesseract-sys = "0.5.14"
