[package]
name = "dash2gps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
image = "0.24.5"
tesseract = "0.12.0"
tesseract-sys = "0.5.14"
notify = "5.1.0"
crossbeam-channel = "0.5.6"
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3.26"
regex = "1.7.1"
once_cell = "1.17.1"
