[package]
name = "dash2gps"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Mohammad Mustakim Ali"]

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
image = "0.24.5"
tesseract = "0.12.0"
tesseract-sys = "0.5.14"
notify = "5.1.0"
crossbeam-channel = "0.5.6"
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3.26"
regex = "1.7.1"
once_cell = "1.17.1"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
